--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -6,14 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-  - name: Copy the code to test
-    uses: actions/checkout@v3
-  - name: Set up Python
-    uses: actions/setup-python@v3
-    with:
-      python-version: 3.11
-  - name: Install dependencies
-    run: python -m pip install --update pip && pip install pytest
-  - name: Test code with pytest
-    run: pytest
+    steps:
+     - uses: actions/checkout@v3
+     - name: Set up Python
+       uses: actions/setup-python@v3
+       with:
+         python-version: 3.11
+     - name: Install dependencies
+       run: python -m pip install --update pip && pip install pytest
+     - name: Test code with pytest
+       run: pytest
