--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -13,6 +13,6 @@ jobs:
        with:
          python-version: 3.11
      - name: Install dependencies
-       run: python -m pip install --update pip && pip install pytest
+       run: python -m pip install --upgrade pip && pip install pytest
      - name: Test code with pytest
        run: pytest
